syntax = "proto3";
package v1;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

//entry
message Mem {
    int64 id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;

}

//new entry
message NewMemRequest {
    string title = 1;
    string description = 2;
}
message NewMemResponse {
    int64 id = 1 ;
}

//get entries
message GetMemsRequest {
}
message GetMemsResponse {
    repeated Mem mems = 1;
}


//update entry
message UpdateMemRequest {
    int64 id = 1;
    string title = 2;
    string description = 3;
}
message UpdateMemResponse {
}

//get entry
message GetMemRequest {
    int64 id=1;
}
message GetMemResponse {
    Mem mem = 1;
}

//delete entry
message DeleteMemRequest {
    int64 id=1;
}
message DeleteMemResponse {
}

//services
service MemService {
    //creates a new mem
    rpc NewMem(NewMemRequest) returns (NewMemResponse){
        option (google.api.http) = {
            post: "/v1/mems"
            body: "*"
        };
    }

    //Get all mems
    rpc GetMems(GetMemsRequest) returns (GetMemsResponse){
        option (google.api.http) = {
            get: "/v1/mems"
        };
    }

    //updates a particular mem
    rpc UpdateMem(UpdateMemRequest) returns (UpdateMemResponse){
        option (google.api.http) = {
            put: "/v1/mems/{id}"
            body: "*"
        };
    }

    //gets a particular mem
    rpc GetMem(GetMemRequest) returns (GetMemResponse){
        option (google.api.http) = {
            get: "/v1/mems/{id}"
        };
    }

    //deletes a particular mem
    rpc DeleteMem(DeleteMemRequest) returns (DeleteMemResponse){
        option (google.api.http) = {
            delete: "/v1/mems/{id}"
        };
    }
}



